feat(auth): add initial setup for Auth API and DAL
- Added .editorconfig for consistent code style
- Updated Auth.API.csproj with new package references
- Removed sample Class1.cs files from BLL and DAL
- Implemented AuthDbContext and User, Role entities
- Added ServiceCollectionExtensions for DAL services
- Created initial migration for AuthDbContext
- Added docker-compose.local.yml for local development

--- a/Services/Auth/Directory.Build.props
+++ b/Services/Auth/Directory.Build.props
@@ -8,13 +8,16 @@
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-        <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
-        <NoWarn>$(NoWarn),1573,1591,1712</NoWarn>
+        <!-- <NoWarn>$(NoWarn),1573,1591,1712</NoWarn> -->
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="SonarAnalyzer.CSharp">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="SonarAnalyzer.CSharp"
+            Condition="$(MSBuildProjectExtension) == '.csproj'">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers"
+            Condition="$(MSBuildProjectExtension) == '.csproj'">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
