feat(auth): implement AuthService and AuthController with temp storage
- Added AuthService with methods for token generation, user
registration,
  and token refresh.
- Implemented AuthController to handle authentication-related endpoints.
- Configured JWT authentication and Swagger in Program.cs.
- Added ErrorOr package for error handling.
- Updated .editorconfig to track TODO tags.
- Added JwtSettings model for JWT configuration.

--- a/Services/.editorconfig
+++ b/Services/.editorconfig
@@ -376,3 +376,6 @@ dotnet_diagnostic.IDE0058.severity = none
 # disable rules for Migration files 
 [**/Migrations/*.cs]
 generated_code = true
+
+# S1135: Track uses of "TODO" tags
+dotnet.diagnostic.S1135.severity = warning
