--- a/Services/Auth/Auth.BLL/Auth.BLL.csproj
+++ b/Services/Auth/Auth.BLL/Auth.BLL.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\Auth.DAL\Auth.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
