--- a/Services/Auth/Directory.Build.props
+++ b/Services/Auth/Directory.Build.props
@@ -5,8 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <AnalysisLevel>latest</AnalysisLevel>
         <AnalysisMode>All</AnalysisMode>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+        <!-- <TreatWarningsAsErrors>true</TreatWarningsAsErrors> -->
+        <!-- <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors> -->
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
         <!-- <NoWarn>$(NoWarn),1573,1591,1712</NoWarn> -->
     </PropertyGroup>
