--- a/Services/Auth/Directory.Packages.props
+++ b/Services/Auth/Directory.Packages.props
@@ -5,6 +5,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <PackageVersion Include="ErrorOr" Version="2.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
