feat(auth): refactor auth code handling and validation
- Moved request models to separate files for better organization
- Added new methods to IAuthService for token validation and creation
- Implemented database storage for auth codes
- Updated AuthService to use EF Core for auth code management
- Enhanced error handling and validation in AuthService
- Updated JWT settings to validate audience
- Added migration for AuthCodes table

--- a/Services/.editorconfig
+++ b/Services/.editorconfig
@@ -379,3 +379,9 @@ generated_code = true
 
 # S1135: Track uses of "TODO" tags
 dotnet.diagnostic.S1135.severity = warning
+
+#IDE0008 Use explicit type
+dotnet_diagnostic.IDE0008.severity = none
+
+[*.{cs,vb}]
+dotnet_diagnostic.CA1515.severity = none
