--- a/Services/Auth/Auth.API/appsettings.json
+++ b/Services/Auth/Auth.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AdminSettings": {
+    "Email": "admin@example.com",
+    "Password": "StrongPassword123!"
+  }
 }
