feat(events): add event invitation and join system
Implements a complete event invitation system with the following
features:
- Generate unique invitation tokens for events
- Validate invitation tokens
- Join events using invitation tokens
- Added database migration for InvitationToken entity
- Updated Swagger configuration for authentication

--- a/Services/.editorconfig
+++ b/Services/.editorconfig
@@ -385,3 +385,7 @@ dotnet_diagnostic.IDE0008.severity = none
 
 [*.{cs,vb}]
 dotnet_diagnostic.CA1515.severity = none
+
+[*.{cs,vb}]
+dotnet_diagnostic.IDE0320.severity = none
+
