--- a/frontend/dorm-app/package.json
+++ b/frontend/dorm-app/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{ts,html,scss,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,html,scss,tsx}\""
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
@@ -17,6 +19,7 @@
     "@tanstack/react-router": "^1.114.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
