--- a/frontend/dorm-app/package.json
+++ b/frontend/dorm-app/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
-    "@tanstack/react-router": "^1.114.22",
+    "@tanstack/react-router": "^1.115.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
@@ -30,6 +32,8 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@tanstack/react-router-devtools": "^1.115.0",
+    "@tanstack/router-plugin": "^1.115.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
