feat: add FirstName and LastName fields to AdminSettings in appsettings.json

--- a/Services/Auth/Auth.API/appsettings.json
+++ b/Services/Auth/Auth.API/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "AdminSettings": {
     "Email": "admin@example.com",
-    "Password": "StrongPassword123!"
+    "Password": "StrongPassword123!",
+    "FirstName": "Admin",
+    "LastName": "User"
   }
 }
