--- a/Services/Events/Events.API/appsettings.Development.json
+++ b/Services/Events/Events.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=events_db;Username=postgres;Password=postgres"
+  },
+  "AuthService": {
+    "ApiUrl": "http://localhost:5001"
   }
 }
