--- a/Services/Events/Events.API/appsettings.json
+++ b/Services/Events/Events.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthService": {
+    "ApiUrl": "http://localhost:5001"
+  }
 }
