--- a/.gitignore
+++ b/.gitignore
@@ -485,7 +485,7 @@ $RECYCLE.BIN/
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
