feat(events): replace PagedEventsResponse with shared PagedResponse
- Removed `PagedEventsResponse` and `PagedList` from Events.API.
- Updated `GetEvents` feature to use `PagedResponse` from
Shared.PagedList.
- Added reference to Shared.PagedList in Events.API project.
- Removed unused Shared.TokenService project and its references.

--- a/Services/Events/Events.API/Events.API.csproj
+++ b/Services/Events/Events.API/Events.API.csproj
@@ -24,8 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.PagedList\Shared.PagedList.csproj" />
   </ItemGroup>
+
 
 
 </Project>
