--- a/Services/Rooms/Rooms.API/Rooms.API.csproj
+++ b/Services/Rooms/Rooms.API/Rooms.API.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.PagedList\Shared.PagedList.csproj" />
   </ItemGroup>
 
 
