feat(rooms-api): enhance maintenance ticket management
- Added new properties to MaintenanceTicket entity, including
  ReporterById, AssignedToId, and Priority.
- Introduced MaintenancePriority enum for ticket prioritization.
- Updated maintenance ticket-related contracts and features to
  support new properties.
- Implemented MaintenanceTicketEnricher for enriching tickets
  with user details.
- Integrated UserServiceClient for fetching user data.
- Updated seed data to include ReporterById and AssignedToId.
- Enhanced API responses with enriched user and room details.
- Registered Mapster and MaintenanceTicketEnricher in DI container.
- Updated swagger.json to reflect new API changes.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -52,6 +52,50 @@
           "Path": "/api/events/{**catch-all}",
           "Methods": ["POST", "PUT", "DELETE"]
         }
+      },
+      "roomService-buildings-public": {
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/buildings/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "roomService-floors-public": {
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/floors/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "roomService-blocks-public": {
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/blocks/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "roomService-rooms-public": {
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/rooms/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "roomService-maintainance-public": {
+        "AuthorizationPolicy": "anonymous",
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/maintenance-tickets/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "roomService-maintainance-private": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/maintenance-tickets/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE"]
+        }
       }
     },
     "Clusters": {
@@ -66,6 +110,13 @@
         "Destinations": {
           "authDestination": {
             "Address": "http://localhost:5001/"
+          }
+        }
+      },
+      "roomCluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:5003/"
           }
         }
       }
