--- a/Services/Rooms/Rooms.API/appsettings.Development.json
+++ b/Services/Rooms/Rooms.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=rooms.db"
+  },
+  "AuthService": {
+    "ApiUrl": "http://localhost:5001"
   }
 }
