feat(api): work on place info in room detail page
- Changed userService AuthorizationPolicy from "default" to "anonymous".
- Added new roomService-places-public route with GET method for fetching places.
- Updated application URL in launch settings for local development.
- Enhanced documentation to include new port for Aspire service.
- Modified PlacesResponse to include OccupiedByUserId property.
- Refactored GetPlaces feature to utilize new query parameters for pagination and filtering.
- Improved loading states in MaintenanceCenter and TicketFilters components.
- Introduced useUser hook for fetching user details in PlacesAndResidents component.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -31,10 +31,11 @@
         }
       },
       "userService": {
-        "AuthorizationPolicy": "default",
+        "AuthorizationPolicy": "anonymous",
         "ClusterId": "authCluster",
         "Match": {
-          "Path": "/api/user/{**catch-all}"
+          "Path": "/api/user/{**catch-all}",
+          "Methods": ["GET"]
         }
       },
       "eventService-public": {
@@ -95,6 +96,13 @@
         "Match": {
           "Path": "/api/maintenance-tickets/{**catch-all}",
           "Methods": ["POST", "PUT", "DELETE"]
+        }
+      },
+      "roomService-places-public": {
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/places/{**catch-all}",
+          "Methods": ["GET"]
         }
       }
     },
