feat(rooms): add room editing functionality and new routes
- Added a new route for editing rooms at '/rooms/$roomId/edit'.
- Implemented RoomEditPage component with form validation using Yup.
- Updated route tree to include the new edit route.
- Enhanced RoomDetails component to allow navigation to the edit page for users with Admin or Owner roles.
- Modified appsettings.Development.json to include new authorization policies for room services.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -82,6 +82,14 @@
           "Methods": ["GET"]
         }
       },
+      "roomService-rooms-private": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/rooms/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE"]
+        }
+      },
       "roomService-maintainance-public": {
         "AuthorizationPolicy": "anonymous",
         "ClusterId": "roomCluster",
