feat(events): integrate RabbitMQ for event messaging and enhance event management
- Added RabbitMQ service configuration in docker-compose for local development.
- Integrated MassTransit for message handling in Events.API.
- Updated event creation and editing features to include BuildingId and RoomId.
- Implemented event messaging to publish event creation details to RabbitMQ.
- Enhanced event contracts to support new properties for building and room associations.
- Created migrations to add BuildingId and RoomId to the Events table.
- Updated frontend components to handle building and room selection during event creation and editing.

--- a/Services/Events/Events.API/appsettings.Development.json
+++ b/Services/Events/Events.API/appsettings.Development.json
@@ -10,5 +10,10 @@
   },
   "AuthService": {
     "ApiUrl": "http://localhost:5001"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
