--- a/Services/Rooms/Rooms.API/Directory.Packages.props
+++ b/Services/Rooms/Rooms.API/Directory.Packages.props
@@ -6,6 +6,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageVersion Include="Mapster" Version="7.4.0" />
+    <PackageVersion Include="MassTransit" Version="8.1.3" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.1.3" />
     <PackageVersion Include="MediatR" Version="12.4.1" />
     <PackageVersion Include="ErrorOr" Version="2.0.1" />
     <PackageVersion Include="Carter" Version="8.0.0" />
