--- a/Services/AspireOrchestration/AspireOrchestration.AppHost/AspireOrchestration.AppHost.csproj
+++ b/Services/AspireOrchestration/AspireOrchestration.AppHost/AspireOrchestration.AppHost.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\..\Events\Events.API\Events.API.csproj" />
     <ProjectReference Include="..\..\..\Infrastructure-services\ApiGateways\ApiGateway.YARP\ApiGateway.YARP.csproj" />
     <ProjectReference Include="..\..\Rooms\Rooms.API\Rooms.API.csproj" />
+    <ProjectReference Include="..\..\Inspections\Inspections.API\Inspections.API.csproj" />
   </ItemGroup>
 
 </Project>
