--- a/Services/Inspections/Inspections.API/appsettings.json
+++ b/Services/Inspections/Inspections.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Inspections.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
