feat: add dormitory and inspection management hooks and services
- Implemented `useDormitories` hook for fetching dormitory data.
- Created `useInspections` hook for managing inspection data, including listing, creating, starting, and completing inspections.
- Added `dormitoryService` for API interactions related to dormitories.
- Developed `inspectionService` for handling inspection-related API calls.
- Updated inspection types to include `ShortInspection` for better data handling.
- Refactored inspection detail and creation routes to utilize new hooks and services.
- Enhanced inspections page with pagination and filtering capabilities.
- Improved error handling and user feedback with toast notifications.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -112,6 +112,21 @@
           "Path": "/api/places/{**catch-all}",
           "Methods": ["GET"]
         }
+      },
+      "inspectionService-public": {
+        "ClusterId": "inspectionCluster",
+        "Match": {
+          "Path": "/api/inspections/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "inspectionService-private": {
+        "AuthorizationPolicy": "anonymous",
+        "ClusterId": "inspectionCluster",
+        "Match": {
+          "Path": "/api/inspections/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE", "PATCH"]
+        }
       }
     },
     "Clusters": {
@@ -133,6 +148,13 @@
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:5003/"
+          }
+        }
+      },
+      "inspectionCluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:5004/"
           }
         }
       }
