--- a/Services/Inspections/Inspections.API/appsettings.Development.json
+++ b/Services/Inspections/Inspections.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RoomServiceSettings": {
+    "ApiUrl": "http://localhost:5003"
   }
 }
