--- a/Services/Inspections/Inspections.API/Directory.Packages.props
+++ b/Services/Inspections/Inspections.API/Directory.Packages.props
@@ -19,6 +19,8 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
+    <PackageVersion Include="QuestPDF" Version="2024.3.0" />
+    <PackageVersion Include="SkiaSharp" Version="3.119.0" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.6.0.109712">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
