--- a/Services/Inspections/Inspections.API/Inspections.API.csproj
+++ b/Services/Inspections/Inspections.API/Inspections.API.csproj
@@ -22,6 +22,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+    <PackageReference Include="QuestPDF" />
+    <PackageReference Include="SkiaSharp" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
