feat(user): implement user management service and pagination for user retrieval
- Added IUserService interface and UserService implementation for managing user data.
- Introduced GetUsersAsync method to retrieve a paginated list of users with their roles.
- Updated UserController to include a new endpoint for fetching users with pagination.
- Enhanced frontend with hooks for fetching paginated user data.
- Registered IUserService in the dependency injection container.

--- a/Services/Auth/Auth.BLL/Auth.BLL.csproj
+++ b/Services/Auth/Auth.BLL/Auth.BLL.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Auth.DAL\Auth.DAL.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.PagedList\Shared.PagedList.csproj" />
   </ItemGroup>
 
   <ItemGroup>
