feat(move-management): implement MoveWizard component for managing student move-ins and move-outs
- Added MoveWizard component to facilitate the process of moving students in and out of dormitory places.
- Updated appsettings to include new user service configurations for public and protected access.
- Modified VacatePlace logic to clear user ID when vacating a place.
- Enhanced place service methods to use PUT requests for moving users in and out.
- Updated frontend hooks and types to support new move management features.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -30,12 +30,20 @@
           "Methods": ["GET"]
         }
       },
-      "userService": {
+      "userService-public": {
         "AuthorizationPolicy": "anonymous",
         "ClusterId": "authCluster",
         "Match": {
           "Path": "/api/user/{**catch-all}",
           "Methods": ["GET"]
+        }
+      },
+      "userService-protected": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "authCluster",
+        "Match": {
+          "Path": "/api/user/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE"]
         }
       },
       "linkCodeService-generate": {
@@ -127,6 +135,14 @@
         "Match": {
           "Path": "/api/places/{**catch-all}",
           "Methods": ["GET"]
+        }
+      },
+      "roomService-places-private": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "roomCluster",
+        "Match": {
+          "Path": "/api/places/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE", "PATCH"]
         }
       },
       "inspectionService-public": {
