feat(inspections): integrate MassTransit for room inspection status updates
- Added MassTransit configuration to Program.cs for RabbitMQ integration.
- Enhanced UpdateRoomInspectionStatus handler to publish RoomInspectionStatusUpdatedEvent when room status changes.
- Implemented RoomInspectionStatusUpdatedConsumer to handle published events and create notifications for users.
- Updated NotificationCore API to include RoomServiceClient for fetching room occupants.
- Added new DTOs and event classes for room inspection status updates.
- Improved error handling and logging in the event publishing process.

--- a/Services/NotificationCore/NotificationCore.API/NotificationCore.API.csproj
+++ b/Services/NotificationCore/NotificationCore.API/NotificationCore.API.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\..\Shared\Shared.UserServiceClient\Shared.UserServiceClient.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.Data\Shared.Data.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.RoomServiceClient\Shared.RoomServiceClient.csproj" />
   </ItemGroup>
 
 </Project>
