--- a/Services/NotificationCore/NotificationCore.API/appsettings.Development.json
+++ b/Services/NotificationCore/NotificationCore.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=NotificationCore.db"
+  },
+  "RoomServiceSettings": {
+    "ApiUrl": "http://localhost:5003"
   }
 }
