feat(file-storage): implement file storage service with upload, retrieval, and deletion features
- Added FileService for handling file operations including upload, retrieval, and deletion.
- Created FilesController to expose API endpoints for file management.
- Introduced error handling middleware for consistent error responses.
- Configured file storage settings in appsettings for managing file categories and size limits.
- Implemented models for file metadata and upload requests/responses.
- Added .gitignore to exclude storage files and temporary files from version control.

--- a/Services/FileStorage/FileStorage.API/appsettings.Development.json
+++ b/Services/FileStorage/FileStorage.API/appsettings.Development.json
@@ -4,5 +4,30 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "FileStorage": {
+    "StoragePath": "Storage",
+    "MaxFileSize": 10485760,
+    "Categories": {
+      "avatar": {
+        "Path": "avatars",
+        "MaxSize": 2097152,
+        "AllowedExtensions": [".jpg", ".jpeg", ".png", ".gif"],
+        "MaxWidth": 200,
+        "MaxHeight": 200
+      },
+      "gallery": {
+        "Path": "gallery",
+        "MaxSize": 5242880,
+        "AllowedExtensions": [".jpg", ".jpeg", ".png", ".gif"],
+        "MaxWidth": 1200,
+        "MaxHeight": 1200
+      },
+      "document": {
+        "Path": "documents",
+        "MaxSize": 10485760,
+        "AllowedExtensions": [".pdf", ".doc", ".docx", ".xls", ".xlsx"]
+      }
+    }
   }
 }
