feat(user-avatar): integrate user avatar functionality with file storage service
- Added endpoints for uploading and deleting user avatars in the UserController.
- Implemented avatar handling in the UserService, including validation and error handling.
- Updated UserResponse model to include AvatarUrl for user data retrieval.
- Enhanced frontend components to support avatar upload and display.
- Configured FileServiceClient for standardized file operations across services.
- Added documentation for avatar integration in the Auth service.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -38,6 +38,22 @@
           "Methods": ["GET"]
         }
       },
+      "userService-profile": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "authCluster",
+        "Match": {
+          "Path": "/api/user/profile",
+          "Methods": ["GET"]
+        }
+      },
+      "userService-avatar": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "authCluster",
+        "Match": {
+          "Path": "/api/user/avatar",
+          "Methods": ["POST", "DELETE"]
+        }
+      },
       "userService-protected": {
         "AuthorizationPolicy": "default",
         "ClusterId": "authCluster",
@@ -174,6 +190,21 @@
           "Path": "/api/notifications/{**catch-all}",
           "Methods": ["POST", "PUT", "DELETE", "PATCH"]
         }
+      },
+      "fileStorageService-public": {
+        "ClusterId": "fileStorageCluster",
+        "Match": {
+          "Path": "/api/files/{**catch-all}",
+          "Methods": ["GET"]
+        }
+      },
+      "fileStorageService-private": {
+        "AuthorizationPolicy": "default",
+        "ClusterId": "fileStorageCluster",
+        "Match": {
+          "Path": "/api/files/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE", "PATCH"]
+        }
       }
     },
     "Clusters": {
@@ -209,6 +240,13 @@
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:5006/"
+          }
+        }
+      },
+      "fileStorageCluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:5007/"
           }
         }
       }
