--- a/Services/Auth/Auth.API/appsettings.Development.json
+++ b/Services/Auth/Auth.API/appsettings.Development.json
@@ -14,5 +14,8 @@
     "Audience": "http://localhost:",
     "AccessTokenExpirationMinutes": 15,
     "RefreshTokenExpirationDays": 7
+  },
+  "FileStorage": {
+    "BaseUrl": "http://localhost:5007"
   }
 }
