--- a/Services/Auth/Auth.API/Auth.API.csproj
+++ b/Services/Auth/Auth.API/Auth.API.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Auth.BLL\Auth.BLL.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
