--- a/Services/Auth/Auth.API/appsettings.json
+++ b/Services/Auth/Auth.API/appsettings.json
@@ -11,5 +11,8 @@
     "Password": "StrongPassword123!",
     "FirstName": "Admin",
     "LastName": "User"
+  },
+  "FileStorage": {
+    "BaseUrl": "https://localhost:5007"
   }
 }
