feat(room-info-card): integrate RoomPhotoGallery for dynamic photo display
- Replaced static room photo array with dynamic photo handling using room.photoUrls.
- Added RoomPhotoGallery component to display room images if available.
- Implemented thumbnail display for additional room photos with error handling for image loading.
- Included a message for cases where no photos are available for the room.

--- a/Services/Rooms/Rooms.API/Rooms.API.csproj
+++ b/Services/Rooms/Rooms.API/Rooms.API.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\..\Shared\Shared.PagedList\Shared.PagedList.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.UserServiceClient\Shared.UserServiceClient.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.Data\Shared.Data.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.FileServiceClient\Shared.FileServiceClient.csproj" />
   </ItemGroup>
 
 </Project>
