--- a/Services/Rooms/Rooms.API/appsettings.Development.json
+++ b/Services/Rooms/Rooms.API/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "AuthService": {
     "ApiUrl": "http://localhost:5001"
+  },
+  "FileStorage": {
+    "BaseUrl": "http://localhost:5007"
   }
 }
