--- a/Services/Rooms/Rooms.API/appsettings.json
+++ b/Services/Rooms/Rooms.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileStorage": {
+    "BaseUrl": "https://localhost:5007"
+  }
 }
