feat(events): migrate to SQLite and enhance database initialization
- Updated appsettings to switch from PostgreSQL to SQLite for local development.
- Added database migration logic to apply pending migrations and seed initial data.
- Introduced SeedData class for populating initial event and invitation token data.
- Removed outdated migration files related to PostgreSQL.
- Enhanced error handling during database migration process.
- Updated frontend to support new event management features and admin routes.

--- a/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
+++ b/Infrastructure-services/ApiGateways/ApiGateway.YARP/appsettings.Development.json
@@ -143,7 +143,7 @@
         "ClusterId": "roomCluster",
         "Match": {
           "Path": "/api/maintenance-tickets/{**catch-all}",
-          "Methods": ["POST", "PUT", "DELETE"]
+          "Methods": ["POST", "PUT", "DELETE", "PATCH"]
         }
       },
       "roomService-places-public": {
