--- a/Services/Events/Events.API/appsettings.Development.json
+++ b/Services/Events/Events.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=events_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Data Source=events_dev.db"
   },
   "AuthService": {
     "ApiUrl": "http://localhost:5001"
