--- a/Services/Events/Events.API/Directory.Packages.props
+++ b/Services/Events/Events.API/Directory.Packages.props
@@ -19,6 +19,7 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.12" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.12" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.6.0.109712">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
