feat: update config and UI for room dashboard
- Add connection string and AuthService settings to appsettings.json.
- Change FileStorage BaseUrl to use http instead of https.
- Ensure appsettings.json is copied to output directory in
Rooms.API.csproj.
- Remove "Free Places" tab from room-dashboard and adjust grid columns
for admin
  and non-admin users.

--- a/Services/Rooms/Rooms.API/Rooms.API.csproj
+++ b/Services/Rooms/Rooms.API/Rooms.API.csproj
@@ -26,6 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.TokenService\Shared.TokenService.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.PagedList\Shared.PagedList.csproj" />
     <ProjectReference Include="..\..\Shared\Shared.UserServiceClient\Shared.UserServiceClient.csproj" />
