--- a/Services/Rooms/Rooms.API/appsettings.json
+++ b/Services/Rooms/Rooms.API/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=rooms.db"
+  },
+  "AuthService": {
+    "ApiUrl": "http://localhost:5001"
+  },
   "FileStorage": {
-    "BaseUrl": "https://localhost:5007"
+    "BaseUrl": "http://localhost:5007"
   }
 }
